# Biological-Reasoning

./: .cursorignore  .env  .env.example  .gitignore  Makefile  README.md  env.sh  mermaid.md  pyproject.toml  requirements.txt  system_architecture.md  test_package.py
.cursor/rules/: strict-rules.mdc
bio_reasoning/: __init__.py  cli.py  config.py  coordinator.py  external_resources.py  reasoning_modes.py
bio_reasoning/config/: __init__.py
bio_reasoning/layers/: base.py  layer_a.py  layer_b.py  layer_c.py  resource_manager.py
bio_reasoning/reasoning/: basics.py  example_reasoning.py  reasoning_modes.py  synthesizer.py
bio_reasoning/utils/: __init__.py  api.py
bio_reasoning2/: reasoning_modes.py  utils.py
bio_reasoning2/deprecated/: state.py
bio_reasoning2/layers/: __init__.py  a.py
bio_reasoning2/layers/a/: __init__.py  parametric_memory.py
docs/: .readthedocs.yaml  Makefile  README_en.md  regenerate_api_template.sh  requirements.txt
docs/source/: conf.py  index.md
src/: cli.py  config.py  coordinator.py  test_reasoning_mode.py
src/agents/: agent_test.py  call_agent.py  generation_agent.py  initialize_client.py  load_model_configs.py  model_servers.yaml  parse_ideas_from_text.py  reflection_agent.py
src/bio_reasoning/: coordinator.py
src/config/: __init__.py
src/layers/: layer_a.py  layer_b.py  resource_manager.py  simple_bioxriv_requests.py
src/reasoning/: reasoning_modes.py
test/: test.txgemma.py  test.txgenna_prompts.py  test_reasoning_mode.py  txgemma_prompts.json
tests/: test_distllm_layer.py  test_reasoning.py
(+50 files in other folders)
