[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-reasoning"
version = "0.1.0"
description = "Biological Reasoning System"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "typing-extensions>=4.0.0",
    "dotenv>=0.9.9",
]

[tool.setuptools]
packages = ["bio_reasoning"]
authors = [{ name = "Thomas Brettin", email = "brettint@gmail.com" }]
# license = { file = "LICENSE" }
